[FIX] 좋아요 장소 목록 조회 응답 구조 추가 및 지역 필터링 추가
Former-commit-id: eb7ff8dd7eace308a628b23f78e4491eb01c812f